# notify-schedule

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.toml
src/: discord.rs  enums.rs  init.rs  job_handler.rs  main.rs  models.rs  ninja_handler.rs  redis.rs
