[package]
name = "notify-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-cron-scheduler = "0.9.4"
toml = "0.8.8"
axum = { version = "0.6.20" , features = ["macros"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.68"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.23", features = ["json"] }
redis = "0.24.0"
